--- a/basicPage.css
+++ b/basicPage.css
@@ -1,8 +1,25 @@
 body{
-	font-family: 'Fira Sans', sans-serif;
-	position: static;
+	font-family: 'Muli', sans-serif;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
 	margin: 0;
 	padding: 0;
+	background-color: white;
+}
+
+.superior{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	color: white;
+}
+
+.menu{
+	color: white;
 }
 
 .contenedor{
@@ -11,7 +28,8 @@ body{
 }
 
 .petEscom{
-	position: absolute;
+	color: white;
+	position: relative;
 	width: 100%;
 	height: 50%;
 	top: 0px;
@@ -22,11 +40,14 @@ body{
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	background-image: url(img/fondo_header.jpg);
+	background-image: linear-gradient(
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ), url(img/fondo_header.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	opacity: 0.7;
+	opacity: 0.85;
 }
 
 .relativo{
@@ -34,77 +55,111 @@ body{
 }
 
 .centrar{
-	position: absolute;
+	position: relative;
     left: 0;
     top: 15%;
     width: 100%;
 }
 
 .logo{
+	position: relative;
 	height:150px;
 	width:auto;
 	margin: 2%;
 }
 
 .pegadoIzq{
-	float:left;
+	float: left;
 }
 
 .pegadoDer{
-	float:right;
+	float: right;
+}
+
+.inicio{
+	display: block;
+	color: white;
+	text-decoration: none;
+	padding-right: 2px;
+	margin: 0px;
 }
 
 #titulo{
-	padding-left: 25%;
-	font-size: 300%;
+	position: relative;
+	padding-left: 23%;
+	font-size: 4.5em;
 	font-family: 'Pacifico', cursive;
+	margin-bottom: 5px;
+	margin-top: 5px;
+	padding-top: 70px;
+}
+
+#lineTitulo{
+    display: block;
+    margin-top: 0.5em;
+    margin-left: 18%;
+    margin-right: 20%;
+    border-style: solid;
+    border-width: 5px;
+	border-color: rgb(251, 255, 55);
+	border-radius: 5px;
 }
 
 #curso{
-	padding-left: 5%;
+	padding-left: 3%;
 	text-align: left;
+	font-size: 1.2em;
 }
 
-nav{
-	text-align: center;
-	font-family: courier new;
-	font-style: italic;
-	font-weight: bold;
-	font-size: 20px;
-
+.menu{
+	float: right;
+	position: absolute;
+	top: 35%;
+	right: 3%;
+	font-size: 1.3em;
+	font-weight: 800;
 }
 
-nav ul{
+.menu ul{
 	display: inline-block;
 	list-style-type:none;
-	margin: 0;
-	padding: 0;
+	margin: 0px;
 }
 
-nav li a:hover{
-	color:blue;
-	background-color: grey;
-	transform: skew(-15deg);
-}
-
-nav ul li{
+.menu li{
+	margin: 1px 2px 1px 2px;
+	padding: 1px 5px 1px 5px;
 	float:left;
-	border-left: #000 solid;
 }
 
-nav ul li:first-child{
-	border-left: none;
+.menu li:hover{
+	margin: 0px 10px 0px 10px;
+	padding: 2px 10px 2px 10px;
+	background-color: rgb(18, 17, 16);
+	transform: skew(-8deg);
 }
 
-nav ul li a{
+.menu li a:hover{
+	transform: scale(1.1);
+}
+
+.menu a{
 	display: block;
-	color: green;
+	color: white;
 	text-decoration: none;
-	padding-right: 20px;
-	padding-left: 20px;
-	background-color: #4682B4;
+	padding-right: 2px;
 }
 
+.separador{
+	position: relative;
+    margin-top: 0.5em;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-style: solid;
+    border-width: 3px;
+	border-color: rgb(251, 255, 55);
+	border-radius: 3px;
+}
 
 /*table{
 	border: solid;
