--- a/styles/header.css
+++ b/styles/header.css
@@ -15,6 +15,7 @@ body{
 	top: 0px;
 	left: 0px;
 	width: 100%;
+	height: 50%;
 	color: white;
 }
 
@@ -32,14 +33,6 @@ body{
 	position: relative;
 	width: 100%;
 	height: 50%;
-	top: 0px;
-	left: 0px;
-}
-
-.fondo{
-	position: absolute;
-	top: 0px;
-	left: 0px;
 	background-image: linear-gradient(
       rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0.4)
@@ -54,17 +47,23 @@ body{
 	position: relative;
 }
 
+.absoluto{
+	position: absolute;
+}
+
 .centrar{
 	position: relative;
-    left: 0;
     top: 15%;
     width: 100%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .logo{
 	position: relative;
-	height:150px;
-	width:auto;
+	height: auto;
+	width: 12.5%;
 	margin: 2%;
 }
 
@@ -74,6 +73,7 @@ body{
 
 .pegadoDer{
 	float: right;
+	margin: 4%;
 }
 
 .inicio{
@@ -85,21 +85,18 @@ body{
 }
 
 #titulo{
-	position: relative;
 	padding-left: 23%;
-	font-size: 4.5em;
+	font-size: 450%;
 	font-family: 'Pacifico', cursive;
 	margin-bottom: 5px;
 	margin-top: 5px;
-	padding-top: 70px;
+	padding-top: 6%;
 }
 
 #lineTitulo{
-	position: relative;
-    display: block;
-    margin-top: 0.5em;
-    margin-left: 18%;
-    margin-right: 20%;
+	margin-top: 0.5em;
+    margin-left: 2%;
+    margin-right: 2%;
     border-style: solid;
     border-width: 5px;
 	border-color: rgb(251, 255, 55);
@@ -114,11 +111,11 @@ body{
 }
 
 .menu{
-	float: right;
+	align: right;
 	position: absolute;
-	top: 35%;
+	top: 5%;
 	right: 3%;
-	font-size: 1.3em;
+	font-size: 130%;
 	font-weight: 800;
 }
 
@@ -152,7 +149,7 @@ body{
 	padding-right: 2px;
 }
 
-.separador{
+#separadorG{
 	position: relative;
     margin-top: 0.5em;
     margin-left: 5%;
