--- a/styles/main.css
+++ b/styles/main.css
@@ -22,36 +22,64 @@
     margin: 6px 4%;
     margin-left: .5%;
     width: 90%;
-    border: 1px solid red;
 }
 
 .articulos{
     position: relative;
     margin: 0;
-    padding: .5%;
-    border: 1px solid orange;
+    padding: 1%;
 }
 
 .descripcionCorta{
+    position: relative;
     margin: 1%;
-    border: solid;
-	border-radius: 10px;
 }
 
-td, tr{
-	border:solid;
+.descripcion{
+    position: relative;
+    display: inline-block;
+    margin: 0.5%;
+    width: 23%;
+    border: solid 1px rgba(175, 175, 175, 0.3);
+    background-color: rgba(175, 175, 175, 0.1);
 }
 
-table tr:nth-child(odd){
-	background-color: #956235;
+.sinFondo{
+    background-color: white;
 }
 
-.vistaInicial{
+
+.vistaMediana{
     margin: 0px;
     padding: 1px;
-    width: 97%;
+    width: 85%;
     height: auto;
-    margin: 1%;
+    align: center;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.vistaChica{
+    margin: 0px;
+    padding: 0px;
+    width: 95%;
+    height: auto;
+    align: center;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.separadorH{
+	position: relative;
+    margin: 0.1em;
+    margin-left: 7%;
+    margin-right: 10%;
+    border-style: solid;
+    border-width: 2px;
+	border-color: rgb(251, 255, 55);
+	border-radius: 2px;
 }
 
 
