--- a/header.css
+++ b/header.css
@@ -161,15 +161,12 @@ body{
 	border-radius: 3px;
 }
 
-/*table{
-	border: solid;
-	border-radius: 10px;
-}
-
-td,tr, th{
-	border:solid;
-}
-
-table tr:nth-child(odd){
-	background-color: #956235;
+#pieDePag{
+    overflow: auto;
+    border-radius: 10px;
+    background-image: linear-gradient(#1C1C1C, #424242);
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    text-align: center;
+    color: #E6E6E6;
+	bottom: 0px;
 }
