--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,19 @@
+.contenedorN{
+    position: relative;
+    width: 100%;
+    overflow: auto;
+    margin: 0%;
+    background-image: linear-gradient(
+      rgba(29, 135, 163, 0.25),
+      rgba(29, 135, 163, 0.25)
+    ), url(img/fondo_main_aside.jpg);
+}
+
 #principal{
     float: left;
     position: relative;
     width: 65%;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .seccion{
@@ -15,6 +27,7 @@
     float: right;
     position: relative;
     width: 35%;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .seccionA{
@@ -26,7 +39,7 @@
 
 .articulos{
     position: relative;
-    margin: 0;
+    margin: 1%;
     padding: 1%;
 }
 
@@ -40,8 +53,9 @@
     display: inline-block;
     margin: 0.5%;
     width: 23%;
-    border: solid 1px rgba(108, 108, 108, 0.4);
-    background-image: linear-gradient(to bottom right, rgba(108, 108, 108, 0.2),rgba(108, 108, 108, 0.1),rgba(108, 108, 108, 0.1),rgba(108, 108, 108, 0.1),rgba(108, 108, 108, 0));
+    border: solid 1px rgba(108, 108, 108, 0.5);
+    background-color: white;
+    background-image: linear-gradient(to bottom right, rgba(108, 108, 108, 0.3),rgba(108, 108, 108, 0.15),rgba(108, 108, 108, 0.15),rgba(108, 108, 108, 0.15),rgba(108, 108, 108, 0));
 }
 
 .descripcion:hover{
@@ -51,9 +65,11 @@
 .descripcionAs{
     position: relative;
     margin: 5%;
+    margin-bottom: 2%;
     width: 90%;
-    border: solid 1px rgba(108, 108, 108, 0.4);
-    background-image: linear-gradient(to bottom right, rgba(108, 108, 108, 0.2),rgba(108, 108, 108, 0.1),rgba(108, 108, 108, 0.1),rgba(108, 108, 108, 0.1),rgba(108, 108, 108, 0));
+    border: solid 1px rgba(108, 108, 108, 0.5);
+    background-color: white;
+    background-image: linear-gradient(to bottom right, rgba(108, 108, 108, 0.3),rgba(108, 108, 108, 0.15),rgba(108, 108, 108, 0.15),rgba(108, 108, 108, 0.15),rgba(108, 108, 108, 0));
 }
 
 .sinFondo{
@@ -67,13 +83,16 @@
 
 .vistaMediana{
     margin: 0px;
-    padding: 1px;
+    padding: 5px;
     width: 85%;
+    max-height: 600px;
     height: auto;
     align: center;
     display:block;
     margin-left: auto;
     margin-right: auto;
+    background-color: white;
+    border: solid 1px rgba(108, 108, 108, 0.4);
 }
 
 .vistaChica{
@@ -88,13 +107,15 @@
 
 .imgPromocional{
     margin: 5%;
-    padding: 2%;
+    margin-bottom: 2%;
+    padding: 1.5%;
     width: 85%;
     height: auto;
     display:block;
     margin-left: auto;
     margin-right: auto;
     border: solid 1px rgba(108, 108, 108, 0.4);
+    background-color: white;
 }
 
 .separadorH{
@@ -121,17 +142,32 @@
     text-align: right;
 }
 
-.tablaMuestra tr:last-child td, .tablaMuestra tr:first-child td:last-child{
-    padding: 2px;
-    border-bottom: solid 0px black;
+.tablaMuestra tr:nth-child(2n+1) td:nth-child(2n), .tablaMuestra tr:nth-child(2n) td:nth-child(2n+1){
+    background-color: white;
+    background-image: linear-gradient(to bottom right, rgba(108, 108, 108, 0.3),rgba(108, 108, 108, 0.15),rgba(108, 108, 108, 0.15),rgba(108, 108, 108, 0.15),rgba(108, 108, 108, 0));
 }
 
-.tablaMuestra tr:nth-child(2n+1) td:nth-child(2n), .tablaMuestra tr:nth-child(2n) td:nth-child(2n+1){
-    background-image: linear-gradient(to bottom right, rgba(108, 108, 108, 0.15),rgba(108, 108, 108, 0.08),rgba(108, 108, 108, 0.05));
+.tablaMuestra tr:nth-child(2n+1) td:nth-child(2n+1), .tablaMuestra tr:nth-child(2n) td:nth-child(2n){
+    background-color: white;
 }
+
+.tablaMuestra tr:first-child td:last-child{
+    padding: 2px;
+    border-bottom: solid 0px black;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.tablaMuestra tr:last-child td.boton{
+    padding-left: 5%;
+    padding-right: 5%;
+    border-bottom: solid 0px black;
+    background-color: rgba(0, 0, 0, 0);
+}
+
 
 
 button{
+    width: 100%;
     background-color: #2E9AFE;
     border: none;
     color: white;
@@ -140,9 +176,10 @@ button{
     border-radius: 5px;
     cursor: pointer;
 }
+
 button:hover{
     background-image: linear-gradient(#2E9AFE, #81DAF5);
-
+    transform: scale(1.05);
 }
 
 button span {
@@ -197,15 +234,15 @@ button:hover span:after {
 }
 
 .modalDialog > div {
-	width: 400px;
+	width: 60%;
 	position: relative;
 	margin: 10% auto;
 	padding: 5px 20px 13px 20px;
 	border-radius: 10px;
-	background: #fff;
-	background: -moz-linear-gradient(#fff, #999);
-	background: -webkit-linear-gradient(#fff, #999);
-	background: -o-linear-gradient(#fff, #999);
+    background-image: linear-gradient(
+      rgba(9, 91, 112, 0.6),
+      rgba(29, 135, 163, 0.1)
+    ), url(img/fondo_main_aside.jpg);
 }
 
 .close {
