Se completa plantilla de inicio
Falta la base de datos para rellenar de informacion util la pagina

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,6 +43,11 @@
     padding: 1%;
 }
 
+.articulos a{
+text-decoration:none;
+color: black;
+}
+
 .descripcionCorta{
     position: relative;
     margin: 1%;
@@ -85,7 +90,7 @@
     margin: 0px;
     padding: 5px;
     width: 85%;
-    max-height: 600px;
+    max-height: 800px;
     height: auto;
     align: center;
     display:block;
@@ -136,6 +141,7 @@
 .tablaMuestra td{
     padding: 2px 7px;
     border-bottom: solid 1px black;
+    vertical-align: top;
 }
 
 .tablaMuestra td:nth-child(2){
@@ -220,6 +226,8 @@ button:hover span:after {
 	bottom: 0;
 	left: 0;
 	background: rgba(0,0,0,0.8);
+    overflow-x:auto;
+    overflow-y:scroll;
 	z-index: 99999;
 	opacity:0;
 	-webkit-transition: opacity 400ms ease-in;
@@ -234,7 +242,7 @@ button:hover span:after {
 }
 
 .modalDialog > div {
-	width: 60%;
+	width: 80%;
 	position: relative;
 	margin: 10% auto;
 	padding: 5px 20px 13px 20px;
