--- a/statics/css/main.css
+++ b/statics/css/main.css
@@ -86,7 +86,15 @@ color: black;
 }
 
 .imagenVistaM{
-    height: 200px;
+    margin: 0px;
+    padding: 5px;
+    width: 85%;
+    max-height: 200px;
+    height: auto;
+    align: center;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -106,9 +114,11 @@ color: black;
 
 .vistaChica{
     margin: 0px;
-    padding: 0px;
+    padding: 5px;
     width: 95%;
+    max-height: 250px;
     height: auto;
+    align: center;
     display:block;
     margin-left: auto;
     margin-right: auto;
@@ -119,6 +129,7 @@ color: black;
     margin-bottom: 2%;
     padding: 1.5%;
     width: 85%;
+    max-height: 250px;
     height: auto;
     display:block;
     margin-left: auto;
